--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# --frontend--
 .DS_Store
 node_modules
 /dist
@@ -19,3 +20,36 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+# --backend--
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**
+!**/src/test/**
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+
+### VS Code ###
+.vscode/
